--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>portfolio</title>
 </head>
 <body>
-    hey! i'm chirag.
-    i'm working on my portfolio.
+    <p>hey! i'm chirag.</p> 
+   <p>i'm working on my portfolio. </p> 
 
 </body>
 </html>
