--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="section ow">
         <div class="container container-center">
             <h1>Technologies</h1>
-        <p class="projects-line">I'm familiar with HTML5, CSS3, Git, Javascript, NodeJS, ReactJS, and Web Hosting</p>
+        <p class="projects-line">I'm familiar with HTML5, CSS3, Git, Javascript, NodeJS, ReactJS, and Web Hosting.</p>
         </div>
         
     </section>
@@ -43,7 +43,7 @@
     <section class="section ow">
         <div class="container container-center">
             <h1>Blogs</h1>
-        <p class="projects-line">I'm also working on some technical and non technical blogs. browse my blogs here</p>
+        <p class="projects-line">I'm also working on some technical and non technical blogs. browse my blogs here.</p>
         <a class="link link-secondary" href="blogs.html">Read Blogs</a>
     </div>
         
