changed icon to a link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navigation container">
-        <div class="nav-brand"> <img src="images/icon.svg" alt=""> </div>
+        <div class="nav-brand"> <a href="/"><img src="images/icon.svg" alt=""></a>  </div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline"><a class="link link-active" href="/index.html">Home</a></li>
             <li class="list-item-inline"><a class="link" href="/projects.html">Projects</a></li>
