--- a/blogs.html
+++ b/blogs.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <nav class="navigation container">
-        <div class="nav-brand"> <img src="images/icon.svg" alt=""> </div>
+        <div class="nav-brand"> <a href="/"><img src="images/icon.svg" alt=""></a>  </div>
         <ul class="list-non-bullet nav-pills">
-            <li class="list-item-inline"><a class="link" href="/index.html">Home</a></li>
+            <li class="list-item-inline"><a class="link " href="/index.html">Home</a></li>
             <li class="list-item-inline"><a class="link" href="/projects.html">Projects</a></li>
             <li class="list-item-inline"><a class="link link-active" href="/blogs.html">Blogs</a></li>
         </ul>
