--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
             <h1>How well do you know me.</h1>
             <p class="projects-line">A CLI app built with nodeJS.</p>
             
-            <a class="link link-primary projects-button one" href="https://replit.com/@chirag15/quiz?embed=1&output=1" target="_blank">Live project</a>
+            <a class="link link-primary projects-button one" href="https://replit.com/@chirag15/quiz2?embed=1&output=1" target="_blank">Live project</a>
         <a class="link link-secondary projects-button two" href="https://github.com/Chiragsanikam/quiz-1/blob/main/quiz.js" target="_blank">View source</a>
         </div>
         
