--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="section ow">
         <div class="container container-center">
             <h1>Technologies</h1>
-        <p class="projects-line">I'm familiar with HTML5, CSS3, Git, Javascript, NodeJS, ReactJS, and Web Hosting.</p>
+        <p class="projects-line">I'm familiar with HTML5, CSS3, Git, Javascript, NodeJS and Web Hosting.</p>
         </div>
         
     </section>
